--- a/Tugas-2/style.css
+++ b/Tugas-2/style.css
@@ -5,10 +5,13 @@ body {
 /* nav */
 header{
     background: white;
-    position: sticky;
-    right: 0;
-    top: 0;
+    position: fixed;
+    display: flex;
+    right: 0px;
+    left: 0px;
+    top: 0px;
     padding: 10px;
+    justify-content: space-between;
 }
 
 nav{
@@ -31,6 +34,9 @@ footer{
     position: sticky;
     padding: 10px;
     width : 100%;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
 }
 
 h5{
